# docs/swagger.json
@@ -108,6 +108,33 @@
                 }
             }
         },
+        "/api/v1/general/settings/tax": {
+            "post": {
+                "tags": [
+                    "general"
+                ],
+                "operationId": "UpdateTaxSetting",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/UpdateTaxSettingReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/UpdateTaxSettingRes"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/general/summary": {
             "get": {
                 "tags": [
@@ -405,6 +432,25 @@
             ],
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "UpdateTaxSettingReq": {
+            "type": "object",
+            "required": [
+                "tax_percentage"
+            ],
+            "properties": {
+                "tax_percentage": {
+                    "type": "number"
+                }
+            }
+        },
+        "UpdateTaxSettingRes": {
+            "type": "object",
+            "properties": {
+                "message": {
                     "type": "string"
                 }
             }
