# internal/features/general/dto/requests/general.go
@@ -1,0 +1,5 @@
+package requests
+
+type UpdateTaxSetting struct {
+	TaxPercentage float64 `json:"tax_percentage" validate:"required"`
+} // @name UpdateTaxSettingReq
