# internal/features/general/routes/general.go
@@ -12,6 +12,8 @@ func General(g *gin.RouterGroup, handler *handlers.General) {
 		group := g.Group(relativePath).Use(middlewares.AuthMiddleware())
 		group.GET("/market-summary", handler.GetMarketSummary)
 		group.GET("/summary", handler.GetSummary)
+
+		group.POST("/settings/tax", handler.UpdateTaxSetting)
 		group.GET("/settings", handler.GetSettings)
 	}
 }
